--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -11,3 +11,22 @@ body {
     position: absolute;
     visibility: hidden;
 }
+
+h1, h3 {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+}
+
+.title {
+    font-size: 62px;
+    margin-bottom: 0px;
+}
+
+#restartButton {
+    border: 2px solid purple;
+    border-radius: 10px;
+}
+
+#restartButton:hover {
+    background-color: #009900;
+}
