--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -7,12 +7,12 @@ body {
     display: block;
 }
 
-#gameOver {
+#gameOver, #playHUD {
     position: absolute;
     visibility: hidden;
 }
 
-h1, h3 {
+h1, h2, h3 {
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
@@ -20,13 +20,17 @@ h1, h3 {
 .title {
     font-size: 62px;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #restartButton {
     border: 2px solid purple;
     border-radius: 10px;
 }
-
 #restartButton:hover {
     background-color: #009900;
+}
+
+#scoarboard {
+    margin: 0px;
 }
